--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             About us
         </li>
         <li>
-            Contact us
+            Contact us Samir tut error
         </li>
         <li>
             Blog
